[gd_scene load_steps=7 format=3 uid="uid://cvo8laxsufq68"]

[ext_resource type="PackedScene" uid="uid://c5p44pg763we5" path="res://scenes/ui/card.tscn" id="1_0e1rg"]
[ext_resource type="Script" uid="uid://dpptvtawk51jh" path="res://scenes/ui/card_container.gd" id="1_hdvm0"]
[ext_resource type="Script" uid="uid://caxq6474sag26" path="res://scenes/ui/fight_ui.gd" id="1_mg66j"]
[ext_resource type="PackedScene" uid="uid://s8lnhblfx2w3" path="res://scenes/ui/wand_container.tscn" id="4_rksgv"]
[ext_resource type="PackedScene" uid="uid://wya6y4wwhefh" path="res://scenes/ui/card_shower.tscn" id="4_yskse"]

[sub_resource type="Curve" id="Curve_yskse"]
_data = [Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(0.91277885, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -11.52546, 0.0, 0, 0]
point_count = 3

[node name="FightUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_mg66j")

[node name="MouseDropMask" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CardContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
script = ExtResource("1_hdvm0")

[node name="Card" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
offset_right = 0.0
offset_bottom = 0.0
grow_vertical = 0

[node name="Card2" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card3" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card4" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card5" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card6" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card7" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card8" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card9" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card10" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card11" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card12" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card13" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card14" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card15" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card16" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card17" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card18" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card19" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Card20" parent="CardContainer" instance=ExtResource("1_0e1rg")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="WandContainer" parent="." instance=ExtResource("4_rksgv")]
layout_mode = 1

[node name="DraggingLineContainer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="Line2D" type="Line2D" parent="DraggingLineContainer"]
width = 20.0
width_curve = SubResource("Curve_yskse")
default_color = Color(0.6621677, 0.0010432821, 0.7750008, 1)

[node name="CardShower" parent="." instance=ExtResource("4_yskse")]
layout_mode = 1
anchor_bottom = 0.846
offset_bottom = 0.0
